<resources>

    <string name="mine_user_empty_username">请填写用户名</string>
    <string name="mine_user_empty_introduce">写下你对世界想说的话，就现在</string>
    <string name="mine_to_download">扫一扫下载，长按保存</string>

    <!--    首页-->
    <!--TODO: 删除无用String-->
    <string name="mine_sign_name">签到</string>
    <string name="mine_sing_successive_default">已连续签到--天</string>
    <string name="mine_question">提问</string>
    <string name="mine_answer">回答</string>
    <string name="mine_reply_to_comment">评论</string>
    <string name="mine_praise">获赞</string>
    <string name="mine_number_default">--</string>
    <string name="mine_show_schedule_first_launch">启动APP时最先显示课表页面</string>
    <string name="mine_custom_icon">自定义桌面小图标</string>
    <string name="mine_feedback_suggestion">意见与反馈</string>
    <string name="mine_security">账号与安全</string>
    <string name="mine_about_redrock">红岩网校</string>
    <string name="mine_about">关于掌邮</string>
    <string name="mine_exit">退出登录</string>
    <string name="mine_login_now">马上登录</string>
    <string name="mine_logout_title">退出登录</string>
    <string name="mine_logout_content">是否退出当前账号？</string>
    <string name="mine_dynamic">动态</string>
    <!--    编辑-->
    <string name="mine_nickname">昵称</string>
    <string name="mine_nickname_default">输入您的昵称</string>
    <string name="mine_introduce">个性签名</string>
    <string name="mine_introduce_default">输入个性签名</string>
    <string name="mine_qq">QQ</string>
    <string name="mine_phone">电话</string>
    <string name="mine_college">学院</string>
    <string name="mine_info_default">完善你的个人信息哦</string>
    <string name="mine_info_save">已保存</string>
    <string name="mine_info_contact">写下您的联系方式，便于我们与您联系</string>
    <string name="mine_exit_edit">退出编辑</string>
    <string name="mine_exit_edit_quest">你的资料还未保存，是否退出？</string>
    <!--    签到-->
    <string name="mine_sign_to_sign">签到</string>
    <string name="mine_sign_mon">周一</string>
    <string name="mine_sign_tue">周二</string>
    <string name="mine_sign_wed">周三</string>
    <string name="mine_sign_thurs">周四</string>
    <string name="mine_sign_fri">周五</string>
    <string name="mine_sign_sat">周六</string>
    <string name="mine_sign_sun">周日</string>
    <string name="mine_sign_year_default">2019-2020</string>
    <string name="mine_sign_week_default">上学期第--周</string>
    <string name="mine_sign_serialDays_default">已连续打卡--天</string>
    <string name="mine_sign_ranking_default">还没有打卡哦</string>
    <string name="mine_sign_ranking_percentage_default">超过--%的邮子</string>
    <string name="mine_sign_week_integral">10积分</string>
    <string name="mine_sign_store_integral_default">--</string>
    <string name="mine_sign_store_title">积分商城</string>
    <string name="mine_sign_store_my_product">我的商品</string>
    <string name="mine_sign_store_item_name_default">redrock限量手环</string>
    <string name="mine_sign_store_item_count_default">仅剩555件</string>
    <string name="mine_sign_store_item_integral_default">13</string>
    <string name="mine_sign_store_item_exchange">兑换</string>
    <string name="mine_sign_store_item_exchange_for_sure">商品兑换</string>

    <string name="mine_my_product_time_pre">兑换时间：</string>
    <string name="mine_my_product">商品领取</string>
    <string name="mine_my_product_unclaimed">如果是实体商品，请携带有效证件前往红岩网校工作站B区领取奖品</string>
    <string name="mine_my_product_claimed">商品已经领了哟，继续攒积分兑换更多奖品吧</string>


    <!--草稿箱-->
    <string name="mine_draft_delete_success">删除成功</string>
    <string name="mine_draft_delete_failed">删除失败</string>


    <!--评论-->
    <string name="mine_comment_at_start">你评论了 </string>
    <string name="mine_comment_at_end"> 的回答</string>
    <string name="mine_comment_received_at_end"> 评论了你的回答</string>


    <!--关于-->
    <string name="mine_about_sharing">分享</string>
    <string name="mine_about_function_intro">功能介绍</string>
    <string name="mine_about_website">产品官网</string>
    <string name="mine_about_legal">《掌上重邮用户使用条款》</string>
    <string name="mine_about_update">版本更新</string>
    <string name="mine_about_1">红岩网校工作站出品</string>
    <string name="mine_about_copyright">CopyRight © 2015&#8211;2020 All Rights Reserved</string>
    <string name="mine_sign_store_back">store back</string>

    <!--密码与安全-->

    <string name="mine_security_change_pass_word_hint">重设密码</string>
    <string name="mine_security_forget_pass_word_hint">请输入学号</string>
    <string name="mine_security_change_pass_word">修改密码</string>
    <string name="mine_security_change_secret_security">修改密保</string>
    <string name="mine_security_change_binding_mail">修改绑定邮箱</string>
    <string name="mine_security_dialog_tip">温馨提示</string>
    <string name="mine_security_please_input_password">请再输入6–16位新密码</string>
    <string name="mine_security_forget_password">忘记密码？</string>
    <string name="mine_security_next">下一步</string>
    <string name="mine_security_your_password_protect_question">你的保密问题是：</string>
    <string name="mine_security_sel_question">选择一个密保问题</string>
    <string name="mine_security_answer_to_question">你的问题的回答是</string>
    <string name="mine_security_your_best_friend_name"> </string>
    <string name="mine_security_confirm">确定</string>
    <string name="mine_security_bind_email">绑定邮箱</string>
    <string name="mine_security_type_in_email_address">请输入邮箱地址：</string>
    <string name="mine_security_type_in_old_password">请输入旧密码</string>
    <string name="mine_security_resend">重新发送</string>
    <string name="mine_security_please_type_correct_address">请输入正确的邮箱地址</string>
    <string name="mine_security_please_type_new_words">请输入6–16位新密码</string>
    <string name="mine_security_change_password">修改密码</string>
    <string name="mine_security_new_password_incorrect">新密码不符合要求，请重新输入</string>
    <string name="mine_security_retype">确认密码和新密码不符，请重新输入</string>
    <string name="mine_security_bind_email_next">下一步</string>
    <string name="mine_security_bind_email_sent_to_your_email">已向你的邮箱发送了一条验证码</string>
    <string name="mine_security_bind_email_bind_succeed">验证成功</string>
    <string name="mine_security_bind_email_bind_failed">验证失败</string>
    <string name="mine_security_bind_email_code_expire">验证码已过期</string>
    <string name="mine_security_your_password_question_is">你的密保问题是</string>
    <string name="mine_security_answer_to_your_question_is">你的问题答案是：</string>
    <string name="mine_security_please_input_answer">请输入密保问题的答案（由2–16位字符组成）</string>
    <string name="mine_security_contract_us">验证失败？联系我们</string>
    <string name="mine_security_please_set_protect_or_bind_email">为了您的账号安全，请设置密保/绑定邮箱</string>
    <string name="mine_security_set_password_protect">设置密保</string>
    <string name="mine_security_default_password_hint">你的密码未曾修改，请试试初始密码:身份证后六位/2020级为统一认证码后六位</string>
    <string name="mine_security_relogin">重新登录</string>
    <string name="mine_security_find_password">找回密码</string>
    <string name="mine_security_please_type_in_confirm_code">请输入验证码</string>
    <string name="mine_security_click_to_get_confirm_code">你的保密邮箱是，请点击获取验证码</string>
    <string name="mine_security_get_confirm_code">获取验证码</string>
    <string name="mine_security_out_of_date_or_wrong">验证码有误或过期，请重新获取</string>
    <string name="mine_string_about_us">关于我们</string>
    <string name="mine_string_setting">设置</string>
    <string name="mine_string_score_store">积分商城</string>

    <!--兑换详细界面的固定字符串-->
    <string name="mine_stamp_detail_title">邮票明细</string>
    <string name="mine_exchange_tool_bar_title">兑换详细</string>
    <string name="mine_activity_exchange_title">订单详细</string>
    <string name="mine_activity_exchange_banner_content">请凭订单号在30天内到红岩网校领取商品，超时自动失效</string>
    <string name="mine_activity_exchange_product_name_text">商品价格:</string>
    <string name="mine_activity_exchange_product_detail_text">商品名称:</string>
    <string name="mine_activity_exchange_trading_hours">交易时间:</string>
    <string name="mine_activity_exchange_product_state_text">商品状态:</string>
    <string name="mine_dialog_buy_product_none_content">啊哦！手慢了！下次再来吧！</string>
    <string name="mine_task_do_it_btn_text">去签到</string>

    <!--商品详情页面 -->
    <string name="mine_stamp_goods_detail_intr_tv">权益说明</string>
    <string name="mine_stamp_goods_detail_last_tv">库存量: %d</string>
    <string name="mine_stamp_goods_detail_num">余额: 1222</string>
    <string name="mine_stamp_center_goods_price">121</string>
    <string name="mine_stamp_goods_detail_btn">兑换</string>
    <string name="mine_stamp_center_decorate_detail_real">邮物详情</string>
    <string name="mine_stamp_goods_detail_title_real">小米充电宝</string>
    <string name="mine_stamp_goods_detail_duration_real">有效期:永久</string>
    <string name="mine_stamp_goods_detail_intr_dl_tv_real">1、每个实物商品每人限兑换一次，已经兑换的商品不能退货换货也不予折现。</string>
    <string name="mine_stamp_goods_detail_intr_dl_2_iv_real">2、在法律允许的范围内，本活动的最终解释权归红岩网校工作站所有。</string>
    <string name="mine_stamp_goods_detail_decribe_tv_real">商品描述: 规格:10000mAh 放电: 5V 2.1A</string>
    <string name="mine_stamp_center_decorate_detail_inter">装扮详情</string>
    <string name="mine_stamp_goods_detail_title_inter">掌游PM名片</string>
    <string name="mine_stamp_goods_detail_duration_inter">有效期:15天</string>
    <string name="mine_stamp_goods_detail_intr_dl_tv_inter">1、虚拟商品版权归红岩网校工作站所有。</string>
    <string name="mine_stamp_goods_detail_intr_dl_2_iv_inter">2、在法律允许的范围内，本活动的最终解释权归红岩网校工作站所有。</string>
    <string name="mine_stamp_goods_detail_decribe_tv_inter">商品描述:带上这个名片，你就是这条街最亮的仔带上这个名片，你就是这条街最亮的仔</string>
    <string name="mine_stamp_shop_title">邮票小店</string>
    <string name="mine_stamp_task_title">邮票任务</string>
    <string name="mine_stamp_task_pot">TODO</string>

    <!--等待接口数据编辑-->
    <string name="mine_stamp_center_num_after">178</string>
    <string name="mine_stamp_center_num_tv">110000</string>

    <!--积分商城主页面-->

    <string name="mine_stamp_center_stamp_after">邮票变化后</string>
    <string name="mine_stamp_center_stamp_before">邮票变化前</string>
    <string name="mine_stamp_center_my_stamp">我的邮票</string>
    <string name="mine_stamp_center_detail_iv">明细</string>
    <string name="mine_stamp_center_detail_tv">明细</string>
    <string name="mine_stamp_center_wait_get_tv">你还有待领取的商品，请尽快领取</string>
    <string name="mine_stamp_center">邮票中心</string>
    <string name="mine_stamp_back_iv">返回键</string>
    <string name="mine_stamp_goods_iv">商品图片</string>
    <string name="mine_stamp_goods_title">挂件挂件挂件挂件挂件</string>
    <string name="mine_stamp_goods_amount">库存: %d</string>
    <string name="mine_stamp_user_amount">121</string>
    <string name="mine_exchange_price_text">%d邮票</string>
    <string name="mine_exchange_back_arrow_content_description">返回键</string>
    <string name="mine_exchange_detail_title">商品详细</string>
    <string name="mine_recycle_item_progress_text">%d/5</string>

</resources>
