<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="data"
            type="com.mredrock.cyxbs.mine.page.stamp.center.model.ShopProductTwo" />

        <variable
            name="eventHandler"
            type="com.mredrock.cyxbs.mine.page.stamp.center.binder.GoodsProductOneBinder" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/mine_cardview4"
            android:layout_width="162dp"
            android:layout_height="230dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/mine_cardview3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/goods_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="@{(view)->eventHandler.onClick(view,data.id1)}">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_goods_pic"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:contentDescription="@string/mine_stamp_goods_iv"
                    app:layout_constraintDimensionRatio="w,145:167"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:netImage="@{data.image}"
                    app:srcCompat="@drawable/mine_ic_center_goods" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_goods_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="12dp"
                    android:text="@{data.name}"
                    android:textColor="#15315B"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_goods_pic"
                    tools:ignore="RtlSymmetry"
                    tools:text="@string/mine_stamp_goods_title" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_goods_remain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:alpha="0.7"
                    android:text="@{@string/mine_stamp_goods_amount(data.restCount)}"
                    android:textColor="#15315B"
                    android:textSize="11sp"
                    app:layout_constraintStart_toStartOf="@+id/tv_goods_title"
                    app:layout_constraintTop_toBottomOf="@id/tv_goods_title"
                    tools:text="@string/mine_stamp_goods_amount" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_stamp_icon"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginTop="9dp"
                    android:contentDescription="@string/mine_stamp_goods_detail_last_tv"
                    app:layout_constraintStart_toStartOf="@+id/tv_goods_remain"
                    app:layout_constraintTop_toBottomOf="@id/tv_goods_remain"
                    app:srcCompat="@drawable/mine_ic_center_stamp_backword" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_stamp_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/din_medium"
                    android:text="@{String.valueOf(data.price)}"
                    android:textColor="#5177FF"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_stamp_icon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/iv_stamp_icon"
                    app:layout_constraintTop_toTopOf="@+id/iv_stamp_icon"
                    tools:text="@string/mine_stamp_user_amount" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_goods_buy"
                    android:layout_width="53dp"
                    android:layout_height="27dp"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/mine_shape_goods_buy_btn"
                    android:onClick="@{(view)->eventHandler.onClick(view,data.id1)}"
                    android:text="@string/mine_stamp_goods_detail_btn"
                    android:gravity="center"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:paddingBottom="2dp"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_stamp_num"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/tv_stamp_num"
                    app:layout_constraintTop_toTopOf="@+id/tv_stamp_num" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


        <Space
            android:id="@+id/mine_cardview3"
            android:layout_width="162dp"
            android:layout_height="230dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@null"
            app:cardCornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/mine_cardview4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/mine_cardview4"
            app:layout_constraintTop_toTopOf="@+id/mine_cardview4" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>